added some more 2021 stuff

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 <div class="game-content">
                     <div class="left">
                         <div class="left-content">
-                            <img src="assets/2020_pygame_platformer_collisions_1.gif" alt="image">
+                            <img src="assets/2020_pygame_platformer_collisions_1.gif" alt="">
                         </div>
                     </div>
                     <div class="right">
                         <div class="right-content">
                             <div class="game-info">
-                                <p>info about game</p>
+                                <p>Distant Dungeons was my first attempt at learning how to develop games. I initially got the idea to begin learning when i designed a set of mock-up player sprite animations; I thought it would be great idea to try and put it in a small game of my own. At the time I was very interested a popular platformer called Celeste, so naturally I went for a pixel art, tile-based, 2D platformer. I only had a little experience using Python at the time, so I decided to go with that. I had previously made little games such as snake and Tetris in Python with the Turtle library, but for this project I decided to use Pygame. I hastily and poorly followed a few tutorials and guides on how to make a game in Pygame, and went from there. I learnt how to create tilemap, spritesheets, animations, input systems, and most importantly, collision-detection systems.</p>
                             </div>
                             <div class="github-button">
                                 <a href="index.html">
@@ -55,13 +55,13 @@
                 <div class="game-content">
                     <div class="left">
                         <div class="left-content">
-                            <img src="assets/2020_pygame_platformer_1.gif" alt="image">
+                            <img src="assets/2020_pygame_platformer_1.gif" alt="">
                         </div>
                     </div>
                     <div class="right">
                         <div class="right-content">
                             <div class="game-info">
-                                <p>info about game</p>
+                                <p>Building on my previous game, I learnt to better my both my programming and artistic skills. I was still incredibly influenced by Celeste at the time, which is reflected greatly with the level design and artistic choices. For this game I mostly focused on learning how to design levels; creating damaging spikes, movement power ups, enemies, and layout. This extension on my original game taught me how me to design levels better, but also brought performance to my attention. At the time I didn't know how to fix such problems, but I was aware that I needed to be mindful of how I should be integrating things.</p>
                             </div>
                             <div class="github-button">
                                 <a href="index.html">
@@ -73,25 +73,21 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="year">
-            <div class="year-title" id="2021">
-                <h1>2021</h1>
-            </div>
+            <br>
             <div class="game">
                 <div class="game-title">
-                    <h2>Distant Dungeons</h2>
+                    <h2>Pygame Platformer</h2>
                 </div>
                 <div class="game-content">
                     <div class="left">
                         <div class="left-content">
-                            <img src="assets/2020_pygame_platformer_collisions_1.gif" alt="image">
+                            <img src="assets/2021_pygame_platformer_test_1.gif" alt="">
                         </div>
                     </div>
                     <div class="right">
                         <div class="right-content">
                             <div class="game-info">
-                                <p>info about game</p>
+                                <p>As my previous game was to essentially learn how to actually make a game, I decided to restart and begin building up a better set of systems. I focused more on visual cues, i.e. the player sprite changing color when on the floor, when jumping, and when dashing / is out of dashes. I also began looking at what affects performance in games; Pygame is notorius for being slow, though that is also due to its entry-level styled development processes which target mostly younger developers who do not know how to optimize games yet. I found out that rendering, and constantly checking and looping over things that aren't even on the screen or need to be taken into account. So I implemented basic checking of if tiles are even within the screen's bounds, and that if to even check collisions with them if the player is nowhere near them. I shifted my focus on the systems behind the game, rather than the visuals, as I wanted to make sure I made a properly put together game, rather than a poorly slapped together but just about working game that looked nice.</p>
                             </div>
                             <div class="github-button">
                                 <a href="index.html">
@@ -111,13 +107,13 @@
                 <div class="game-content">
                     <div class="left">
                         <div class="left-content">
-                            <img src="assets/2020_pygame_platformer_1.gif" alt="image">
+                            <img src="assets/2021_pygame_platformer_ext_1.gif" alt="">
                         </div>
                     </div>
                     <div class="right">
                         <div class="right-content">
                             <div class="game-info">
-                                <p>info about game</p>
+                                <p>Building on the previous project, I began to focus more on visual improvements, most notibly vegetation-like decorations in the background, and parallax background effects to emulate depth.</p>
                             </div>
                             <div class="github-button">
                                 <a href="index.html">
